--- a/templates/core/venda/lista_vendas.html
+++ b/templates/core/venda/lista_vendas.html
@@ -23,19 +23,19 @@
         <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
             <div class="card-header">Valor da Meta:</div>
             <div class="card-body">
-                <h5 class="card-title">{{ periodometa.valor_meta }}</h5>
+                <h5 class="card-title">R${{ periodometa.valor_meta }}</h5>
             </div>
         </div>                
         <div class="card text-bg-success mb-3 mx-3" style="max-width: 18rem;">
             <div class="card-header">Valor Alcançado:</div>
             <div class="card-body">
-                <h5 class="card-title">{{ periodometa.progresso }}</h5>
+                <h5 class="card-title">R${{ periodometa.progresso }}</h5>
             </div>
         </div>
         <div class="card text-bg-danger mb-3" style="max-width: 18rem;">
             <div class="card-header">Falta/Faltou:</div>
             <div class="card-body">
-                <h5 class="card-title">{{ periodometa.falta_para_meta }}</h5>
+                <h5 class="card-title">R${{ periodometa.falta_para_meta }}</h5>
             </div>
         </div>
     </div>
