--- a/templates/users/users/home.html
+++ b/templates/users/users/home.html
@@ -10,19 +10,19 @@
                 <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
                     <div class="card-header">Meta Atual:</div>
                     <div class="card-body">
-                        <h5 class="card-title">{{ valor_meta }}</h5>
+                        <h5 class="card-title">R$ {{ valor_meta }}</h5>
                     </div>
                 </div>                
                 <div class="card text-bg-success mb-3 mx-3" style="max-width: 18rem;">
                     <div class="card-header">Valor Alcançado:</div>
                     <div class="card-body">
-                        <h5 class="card-title">{{ valor_alcancado }}</h5>
+                        <h5 class="card-title">R$ {{ valor_alcancado }}</h5>
                     </div>
                 </div>
                 <div class="card text-bg-danger mb-3" style="max-width: 18rem;">
                     <div class="card-header">Falta:</div>
                     <div class="card-body">
-                        <h5 class="card-title">{{ falta_para_meta }}</h5>
+                        <h5 class="card-title">R$ {{ falta_para_meta }}</h5>
                     </div>
                 </div>
             </div>
