--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -323,6 +323,13 @@
                     <ul class="list-group">
                         <a class="list-group-item list-group-item-action mt-1" href="{% url 'listar_contas' %}">Listar Conta Corrente</a>
                     </ul>
+                    <h6 class="mt-3">Vendas a Prazo</h6>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action" href="{% url 'listar_vendas_fiado' %}">Cadastrar Vendas a Prazo</a>
+                    </ul>
+                    <ul class="list-group">
+                        <a class="list-group-item list-group-item-action mt-1" href="{% url 'listar_vendas_fiado' %}">Listar Vendas a Prazo</a>
+                    </ul>                    
                     <h6 class="mt-3">Relatórios</h6>
                     <ul class="list-group">
                         <a class="list-group-item list-group-item-action mt-1" href="{% url 'agenda' %}">Relatórios(FAZER)</a>
