--- a/templates/users/users/editar_usuario.html
+++ b/templates/users/users/editar_usuario.html
@@ -15,7 +15,8 @@
     </div>
     <script>
         $('document').ready(function() {
-            $('#id_cpf').mask('000.000.000-00');    
+            $('#id_cpf').mask('000.000.000-00'); 
+            $('#id_telefone_celular').mask('(00) 0000-0000');    
             var elemento = document.getElementById("id_imagemperfil");
             elemento.classList.add("form-control");
         });
